--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "robotfamily",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://gramme01.github.io/robofamily",
+	"homepage": "https://gramme01.github.io/robofamily/",
 	"dependencies": {
 		"gh-pages": "^2.0.1",
 		"react": "^16.8.6",
